# nova-algo

./: .gitignore  INSTALLATION.md  README.md
agentic-backend/: .env.example  README.md  pyproject.toml
agentic-backend/data/: rebalancr.db
agentic-backend/data/wallets/: wallet-0x5e869af2Af006B538f9c6D231C31DE7cDB4153be.json
agentic-backend/src/: config.py
agentic-backend/src/api/: app.py  dependencies.py
agentic-backend/src/api/middleware/: privy_auth.py
agentic-backend/src/api/routes/: auth.py  chat_routes.py  market.py  portfolio.py  wallet_routes.py  websocket_routes.py
agentic-backend/src/auth/: token_verification.py
agentic-backend/src/chat/: history_manager.py
agentic-backend/src/database/: db_manager.py  db_migration.py
agentic-backend/src/execution/actions/: base_action.py  portfolio_actions.py  trade_actions.py
agentic-backend/src/execution/providers/kuru/: __init__.py  constants.py  kuru_action_provider.py  schemas.py  utils.py
agentic-backend/src/execution/providers/market_action/: __init__.py  (+1 more)
agentic-backend/src/forward_testing/: forward_testing.py
agentic-backend/src/intelligence/: configuration.py  intelligence_engine.py  market_analysis.py  market_conditions.py  market_data.py  market_monitor.py  reviewer.py
agentic-backend/src/intelligence/agent_kit/: agent_manager.py  client.py  service.py  wallet_provider.py
agentic-backend/src/intelligence/allora/: client.py  config.py  models.py  predictions.py
agentic-backend/src/models/: chat.py
agentic-backend/src/performance/: analyzer.py  tracker.py
agentic-backend/src/services/: chat_service.py  market.py
agentic-backend/src/strategy/: engine.py  risk_manager.py  risk_monitor.py  wormhole.py  yield_optimizer.py
agentic-backend/src/tasks/: background_tasks.py
agentic-backend/src/websockets/: auth.py  chat_handler.py  websocket_handlers.py  websocket_manager.py
agentic-backend/tests/integration/: test_allora_integration.py
agentic-backend/tests/wallet_provider/: test_agent_with_wallet.py  test_debug_helpers.py  test_signing.py  test_wallet_methods.py  test_wallet_provider.py  test_wallet_transaction.py
backend/: .env.example  .gitignore  main.py  pyproject.toml  pyrightconfig.json
backend/src/api/: variables.py
backend/src/api/drift/: api.py  deposit.py  error.py  path.py  test_drift_api.py
backend/src/api/uniswap/: __init__.py  api.py  error.py  managers.py  monitoring.py  watcher.py
backend/src/backtest/: mmbacktest.py  mmbacktest2.py  trendfollowing.py  trendfollowing2.py  trendfollowingnew.py
backend/src/common/: config.py  types.py  variables..py
backend/src/notebooks/: marketmaking.ipynb  trendfollowing-backtest.ipynb
backend/src/strategy/: backrunning.py  bollingerbands.py  factory.py  marketmaking.py  trendfollowing.py
backend/src/strategy/backrunner/: README.md  ethereum_backrun_mempool_uniswap_curve_cycle.py  ethereum_executor.vy  ethereum_parser_3pool_curve1.py  pending.py  simulation.py  strategy.py
backend/src/strategy/helpers/: bundle.py  uniswap_curve_cycle.py
backend/src/strategy/marker/: marketmaker.py
backend/src/tests/: test_bollingerbands.py
backend/src/vault/: initialize_vault.py
(+95 files in other folders)
